# conversational-analysis-bot

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile.api  Dockerfile.prepare  Dockerfile.ui  README.md  conversation_analysis_bot_take_home_assignment.docx  docker-compose.langfuse.yml  docker-compose.yml  pyproject.toml
backend/: Dockerfile  agent.py  api.py  config.py  db.py  memory.py  observability.py  rollups.py  schemas.py  taxonomy.py  tools.py
backend/preprocessing/: __init__.py  classifier.py  rollups.py  text.py
data/: topic_taxonomy.yaml
data/chroma/261a0995-e42d-4b8b-9a9e-a1859671159a/: index_metadata.pickle
data/chroma/a8160d43-3b4d-45f3-8cd4-2f963935a99e/: index_metadata.pickle
eval/: questions.yaml  results-baseline.json  results-latest.json  run_eval.py
preprocess/: Dockerfile  __init__.py  embed.py  prepare_data.py  rollups.py  taxonomy.py
report/: build_report.py  report.docx
scripts/: prepare_data.py
ui/: app.py
