[project]
name = "conversation-analysis-bot"
version = "0.1.0"
description = "Conversation analysis bot for contact-centre insights (take-home prototype)"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.40.0",
    "python-dotenv>=1.0.1",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.9.0",
    "streamlit>=1.40.0",
    "chromadb>=0.5.20",
    "sentence-transformers>=3.3.0",
    "polars>=1.18.0",
    "pyyaml>=6.0.2",
    "python-docx>=1.1.2",
    "httpx>=0.28.0",
    "tenacity>=9.0.0",
    "rich>=13.9.0",
    "tqdm>=4.67.0",
    "altair>=5.5.0",
    "wordfreq>=3.1.1",
    "langfuse>=4.6.1",
]

[tool.uv]
dev-dependencies = [
    "ruff>=0.8.0",
    "pytest>=8.3.0",
]
